syntax="proto3";
option go_package = "../pkg/filesystem";

service FileSystem {
	rpc Get(GetRequest) returns (stream GetResponse) {}
	rpc Put(stream PutRequest) returns (PutResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc FileRange(FileRangeRequest) returns (FileRangeResponse) {}
}

message GetRequest {
	string sdfs_name = 2;
}

message GetResponse{
	string payload = 1;
	int64 err = 2;
}

message PutRequest {
	string payload_to_write = 1;
	string sdfs_name = 2;
    bool replica = 3;
}

message PutResponse {
	int64 err = 1;
}

message DeleteRequest {
	string sdfs_name = 1;
    bool replica = 2;
}

message DeleteResponse {
	int64 err = 1;
}

message FileRangeRequest {
	uint32 start = 1;
    uint32 end = 2;
}

message FileRangeResponse {
    repeated string sdfs_names = 1;
}

