syntax="proto3";
option go_package = "../pkg/gen_proto";

message TableEntry {
    string machine_id = 1;
    int32 heartbeat_counter = 2;
    string hostname = 4;
    string port = 5;
	int64 tcp_port = 6; // field added for gRPC and file transfer
    int64 local_time = 3;
}

message Table {
    repeated TableEntry entries = 1;
}

// heartbeat message
message HeartbeatMessage {
    Table table = 1;
    string ip_addr = 2;
    string port = 3;
}
